@@ -1,5 +1,5 @@
 
-R version 2.10.0 Under development (unstable) (2009-03-26 r48221)
+R version 2.10.0 Under development (unstable) (2009-04-17 r48336)
 Copyright (C) 2009 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -761,4 +761,18 @@ Creating a generic for "rbind" in package  ".GlobalEnv"
 + 	  packageSlot(class(ss <- new("signature"))) == "methods",
 + 	  packageSlot(class(as(S, "signature"))) == "methods")
 > ## the 3rd did not have "methods"
+> 
+> ## Invalid "factor"s -- now "caught" by  validity check :
+>  ok.f <- gl(3,5, labels = letters[1:3])
+> bad.f <- structure(rep(1:3, each=5), levels=c("a","a","b"), class="factor")
+> validObject(ok.f) ; assertError(validObject(bad.f))
+[1] TRUE
+> setClass("myF", contains = "factor")
+[1] "myF"
+> validObject(new("myF", ok.f))
+[1] TRUE
+> assertError(validObject(new("myF", bad.f)))
+> removeClass("myF")
+[1] TRUE
+> ## no validity check in R <= 2.9.0
 > 
